--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-study",
+  "name": "generator-easy-npm-tpl",
   "version": "0.0.0",
   "description": "",
   "homepage": "",
@@ -79,6 +79,6 @@
       "prettier"
     ]
   },
-  "repository": "zhaoqize/generator-study",
+  "repository": "zhaoqize/generator-easy-npm-tpl",
   "license": "MIT"
 }
