--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "npm": ">= 4.0.0"
   },
   "dependencies": {
-    "yeoman-generator": "^2.0.1",
     "chalk": "^2.1.0",
+    "command-exists": "^1.2.7",
+    "mkdirp": "^0.5.1",
+    "yeoman-generator": "^2.0.1",
     "yosay": "^2.0.1"
   },
   "jest": {
