--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -3,7 +3,7 @@
     "promptValues": {
       "authorName": "zhaoqize",
       "authorEmail": "zhaoqize@meituan.com",
-      "authorUrl": ""
+      "authorUrl": "https://github.com/zhaoqize"
     }
   }
 }
